[metadata]
name = mlyzed
version = attr: mlyzed.base.__version__
author = Artem Dembitskiy
author_email = art.dembitskiy@gmail.com
url = https://github.com/dembart/mlyzed
description = Molecular dynamics post-processing toolbox
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MD, trajectory, diffusion, conductivity, unwrapping
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pandas
    numpy
    ase
    pymatgen
    scipy

# [options.entry_points]
# console_scripts = 
#     my-example-utility = example.example_module:main

# [options.extras_require]
# notebook = jupyter>=1.0.0, matplotlib
# dev = 
#     black==22.1.0
#     flake8==4.0.1

# [options.package_data]
# example = data/*.json, *.txt
# * = README.md


