[metadata]
name = mlyzed
version = attr: mlyzed.base.__version__
author = Artem Dembitskiy
author_email = art.dembitskiy@gmail.com
url = https://github.com/dembart/mlyzed
description = Molecular dynamics post-processing toolbox
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MD, trajectory, diffusion, conductivity, unwrapping
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    ase
    scipy

# [options.package_data]
# example = data/*.json, *.txt
# * = README.md


