[metadata]
name = mlyzed
version = attr: mlyzed._verison.__version__
author = Artem Dembitskiy
author_email = art.dembitskiy@gmail.com
url = https://github.com/dembart/mlyzed
description = Molecular dynamics post-processing toolbox
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MD, trajectory, diffusion, conductivity, unwrapping
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    ase
    scipy
    vesin
    tqdm
    networkx
    uncertainties
    matplotlib

